--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,31 +1,47 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: S-Complex # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Ou's Intro
+    url: https://www.restent.win
+  - name: Restent's Notebook
+    url: https://blog.restent.win
+  - name: SliverRiver's Library
+    url: https://library.restent.win
+  - name: Pro features for Library
+    url: https://pro.restent.win
+  - name: Upptime
+    url: https://status.restent.win
+
+workflowSchedule:
+  graphs: "0 */4 * * *"
+  responseTime: "0 23 * * *"
+  staticSite: "0 1 * * *"
+  summary: "0 0 * * *"
+  updateTemplate: "0 0 * * *"
+  updates: "0 3 * * *"
+  uptime: "*/5 * * * *"
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  cname: status.restent.win
+  # baseUrl: /upptime
+  logoUrl: https://library.restent.win/images/icons/favicon.webp
+  name: Sliver Complex Status by Upptime
   navbar:
     - title: Status
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
+  singleCommit: true
+
+commitMessages:
+  commitAuthorName: "SliverRiver327"
+  commitAuthorEmail: "148861329+SliverRiver327@users.noreply.github.com"
+
+user-agent: "SliverRiver327 (https://github.com/S-Complex/upptime)"
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
