--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -24,6 +24,10 @@ sites:
     url: https://status.slirv.vip
     headers:
       - "User-Agent: curl/8.2.1 (https://status.slirv.vip)"
+  - name: Artalk
+    url: https://artalk.slirv.vip
+    headers:
+      - "User-Agent: curl/8.2.1 (https://status.slirv.vip)"
 
 workflowSchedule:
   graphs: "0 */4 * * *"
