--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -28,6 +28,10 @@ sites:
     url: https://artalk.slirv.vip
     headers:
       - "User-Agent: curl/8.2.1 (https://status.slirv.vip)"
+  - name: LittleSkin
+    url: https://littleskin.cn
+    headers:
+      - "User-Agent: curl/8.2.1 (https://status.slirv.vip)"
 
 workflowSchedule:
   graphs: "0 */4 * * *"
