--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -16,7 +16,7 @@ sites:
     headers:
       - "User-Agent: curl/8.2.1 (https://status.slirv.vip)"
   - name: Friends linklist
-    url: https://prox.slirv.vip/raw/S-Complex/Friends/main/links.json
+    url: https://links.slirv.vip/links.json
     headers:
       - "User-Agent: curl/8.2.1 (https://status.slirv.vip)"
     method: GET
