--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -28,7 +28,8 @@ sites:
     headers:
       - "User-Agent: curl/8.2.1 (https://status.slirv.vip)"
   - name: Friends' src
-    url: https://friends-src.slirv.vip
+    url: https://friends-src.slirv.vip/linklist
+    method: GET
     headers:
       - "User-Agent: curl/8.2.1 (https://status.slirv.vip)"
 
