--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -24,7 +24,8 @@ sites:
     headers:
       - "User-Agent: curl/8.2.1 (https://status.slirv.vip)"
   - name: R2 Storage
-    url: https://r2.slirv.vip
+    url: https://r2.slirv.vip/index.html
+    method: GET
     headers:
       - "User-Agent: curl/8.2.1 (https://status.slirv.vip)"
   - name: API
